--- a/Task_list/AppUser/package.json
+++ b/Task_list/AppUser/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2"
