--- a/Task_list/AppUser/package.json
+++ b/Task_list/AppUser/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
