updated to-do list

--- a/Task_list/CreateAPI/Task_list/.env
+++ b/Task_list/CreateAPI/Task_list/.env
@@ -1,6 +1,13 @@
+# SECRET_KEY=django-insecure-i4zv=i_!fmnu=b*2ey6+gicxfwom@&!5*379m52xjy1ao&+zbw
+# DB_NAME=DataTaskList
+# DB_USER=postgres
+# DB_PASSWORD=jp40028922
+# DB_PORT=5432
+# DB_HOST=localhost
+
 SECRET_KEY=django-insecure-i4zv=i_!fmnu=b*2ey6+gicxfwom@&!5*379m52xjy1ao&+zbw
-DB_NAME=DataTaskList
-DB_USER=postgres
-DB_PASSWORD=jp40028922
+DB_NAME=tasklistdata
+DB_USER=tasklistdata_user
+DB_PASSWORD=tTuXcFJXW2ZaPMWzP8HafEg7LlZLl8jI
 DB_PORT=5432
-DB_HOST=localhost
+DB_HOST=dpg-cuftk15ds78s73fp5530-a.oregon-postgres.render.com
