--- a/Task_list/AppUser/package.json
+++ b/Task_list/AppUser/package.json
@@ -20,6 +20,7 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "dotenv-webpack": "^8.1.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
